--- a/fanpage.html
+++ b/fanpage.html
@@ -5,7 +5,7 @@
 
     <title>Glass Animals Fan Page</title>
     <link rel="icon" type="image/png" href="Images/Glass Animals Favicon.png" />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./Assets/styles.css" />
   </head>
 
   <body>
@@ -47,7 +47,9 @@
         nomination in the Best New Artist category at the 2022 Grammy Awards.
       </p>
       <p>
-        <a href="https://en.wikipedia.org/wiki/Glass_Animals">Wikipedia</a>
+        <a href="https://en.wikipedia.org/wiki/Glass_Animals"
+          >Source: Wikipedia</a
+        >
       </p>
     </section>
 
@@ -142,7 +144,7 @@
       <img
         id="live-photo"
         src="https://i.ytimg.com/vi/vlOaoU_PWvE/hqdefault.jpg"
-        alt="Wavey Davey's on Fire"
+        alt="Image of Glass Animals performing live"
       />
 
       <a href="https://opensource.glassanimals.com">GlassAnimals.com</a>
